examples/smlfmt-1.2.0/test/fail/select-nonlabel-2.sml
val x = # Longish.Identifier y
